finish the CRUD